<resources>
    <string name="app_name">Popular Movies</string>
    <string name="iv_poster_description">A poster from a movie</string>
    <string name="error_message">An error has occurred.\n Please try again later.</string>
    <string name="sort_by_popularity">Most Popular</string>
    <string name="sort_by_highest_rating">Highest Rated</string>
    <string name="sort_by_favorites">My Favorites</string>
    <string name="movie_poster">movie poster</string>
    <string name="traillers_title">Traillers:</string>
    <string name="reviews_title">Reviews:</string>
    <string name="play_button">play button</string>
    <string name="trailler_title">trailler title</string>
    <string name="comments">Comments:</string>
    <string name="url">URL:</string>
    <string name="author_field">Author: %1$s</string>
    <string name="mark_as_favorites">Mark as Favorites</string>
    <string name="favorites_status">favorites status</string>
    <string name="favorites_empty">favorites empty</string>
    <string name="movie_saved">Movie saved</string>
    <string name="movie_removed">Movie removed</string>
</resources>
