<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.debjyotiguha.popularmovies.MovieDetail">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="@color/colorTitleDetailBackground"
                android:gravity="center_vertical"
                android:paddingBottom="20dp"
                android:paddingEnd="0dp"
                android:paddingLeft="16dp"
                android:paddingRight="0dp"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                tools:text="Chappie"
                android:textColor="@color/colorTitleDetail"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1" />

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="150dp"
                android:layout_height="185dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/movie_poster"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_title"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@color/colorTitleDetailBackground"
                tools:layout_constraintBottom_creator="1"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />

            <TextView
                android:id="@+id/tv_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="7dp"
                android:textSize="22sp"
                app:layout_constraintLeft_toRightOf="@+id/iv_poster"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_title"
                tools:text="2015" />

            <!--For future implementation-->
            <!--<TextView-->
            <!--android:id="@+id/tv_duration"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:text="120min"-->
            <!--android:textSize="18sp"-->
            <!--android:textStyle="bold|italic"-->
            <!--app:layout_constraintLeft_toLeftOf="@+id/tv_year"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/tv_year"-->
            <!--tools:layout_constraintLeft_creator="1" />-->

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="@+id/tv_year"
                app:layout_constraintTop_toBottomOf="@+id/tv_year"
                tools:layout_constraintLeft_creator="1"
                tools:text="8.1/10" />

            <Button
                android:id="@+id/btn_favorites"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/mark_as_favorites"
                android:background="@color/colorBlue"
                android:textColor="@color/colorWhite"
                android:onClick="setFavoriteMovie"
                app:layout_constraintLeft_toLeftOf="@+id/tv_year"
                app:layout_constraintTop_toBottomOf="@+id/tv_rating" />

            <ImageView
                android:id="@+id/iv_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/btn_star_big_off"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/btn_favorites"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:contentDescription="@string/favorites_status"
                app:layout_constraintLeft_toLeftOf="@+id/btn_favorites" />

            <TextView
                android:id="@+id/tv_synopsis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:textSize="14sp"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_poster"
                tools:text="In this stage you’ll add additional functionality to the app you built in Stage 1. You’ll add more information to your movie details view: You’ll allow users to view and play trailers ( either in the youtube app or a web browser). You’ll allow users to read reviews of a selected movie. You’ll also allow users to mark a movie as a favorite in the details view by tapping a button(star). This is for a local movies collection that you will maintain and does not require an API request*. You’ll modify the existing sorting criteria for the main view to include an additional pivot to show their favorites collection.In this stage you’ll add additional functionality to the app you built in Stage 1. You’ll add more information to your movie details view: You’ll allow users to view and play trailers ( either in the youtube app or a web browser). You’ll allow users to read reviews of a selected movie. You’ll also allow users to mark a movie as a favorite in the details view by tapping a button(star). This is for a local movies collection that you will maintain and does not require an API request*. You’ll modify the existing sorting criteria for the main view to include an additional pivot to show their favorites collection." />

            <TextView
                android:id="@+id/tv_gray_line"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"
                android:visibility="visible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_synopsis"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_gray_line">

                <TextView
                    android:id="@+id/tv_traillers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/traillers_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:visibility="visible" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="8dp">

                    <ProgressBar
                        android:id="@+id/pb_trailler_loading_indicator"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:layout_gravity="center"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/tv_trailler_error_display"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/error_message"
                        android:textSize="20sp"
                        android:visibility="invisible" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rc_traillers"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_synopsis" />
                </FrameLayout>

                <TextView
                    android:id="@+id/tv_reviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reviews_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:visibility="visible" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ProgressBar
                        android:id="@+id/pb_review_loading_indicator"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:layout_gravity="center"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/tv_review_error_display"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/error_message"
                        android:textSize="20sp"
                        android:visibility="invisible" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rc_reviews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rc_traillers" />
                </FrameLayout>

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
